# vpn-api

./: .coverage  .coveragerc  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PR_DESCRIPTION.md  README.md  alembic_local.db  artifacts.json  artifacts2.json  artifacts3.json  artifacts4.json  artifacts_list.json  check_wg_paths.sh  create_peer_auth_me.sh  create_peer_final.sh  create_peer_remote.sh  create_peer_with_user.sh  debug_admin_flow.py  debug_register.py  diag2.sh  diag_remote.sh  docker-compose.dev.yml  docker-compose.yml  inspect_db.py  openapi.json  parse_db.py  proxy_admin.py  pyproject.toml  pytest.ini  requirements.txt  run_detail.json  run_jobs_17615231114.json  run_jobs_17615304839.json  run_jobs_17615852376.json  test.db  test_postfix_send.py  tmp_test_wg_adapter.py  (+4 more)
.github/: known_hosts
alembic/: __init__.py  create_db.py  env.py  script.py.mako
ci-artifacts/: 17427807486_log.txt  17427807500_log.txt  17427873947_log.txt
docs/: VPN_PEERS_API.md
reports/: coverage.xml  junit.xml
scripts/: check_schema.py  monitor_runs.py  remote_diag.ps1  server_inspect.sh  smoke_test.ps1  update_env_production.ps1  wg_apply.sh  wg_gen_key.sh  wg_remove.sh
vpn_api/: auth.py  conftest.py  crypto.py  database.py  fix_schema.py  iap_validator.py  inspect_db.py  mail_service.py  main.py  models.py  payments.py  peers.py  requirements-dev.txt  requirements.txt  schemas.py  tariffs.py  test.db  test_add_coverage.py  test_admin_flow.py  test_email_flow.py  test_flow.py  test_payments.py  test_peers.py  test_unit.py  wg_host.py  (+3 more)
(+52 files in other folders)
