[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
exclude = [
	"alembic/*",
	"artifacts/*",
	"ci-artifacts/*",
	"venv/*",
	".git/*",
	"scripts/*",
	"debug_*.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C", "D", "RUF", "B"]
ignore = [
	"B008",  # FastAPI Depends() in defaults — idiomatic, ignore
	"D100",
	"D101",
	"D102",
	"D103",
	"D104",
	"D105",
	"D106",
	"D107",
]

[tool.isort]
profile = "black"

[project]
name = "vpn-api"
version = "0.1.0"
dependencies = [
	"aiohttp>=3.10.7,<4.0.0",
	"wg-easy-api>=0.1.2",
]
